--- a/source/partials/head/_header.slim
+++ b/source/partials/head/_header.slim
@@ -51,7 +51,7 @@ nav.nav data-theme=theme
                     - if nav_item.has_key?("section_link_label")
                       = current_link_to nav_item.section_link_label, nav_item.section_link_uri, title: nav_item.section_link_label, class: "link-arrow link-arrow--yellow show-for-large"
                   - if nav_item.has_key?("child_data")
-                    .columns.small-12.large-4.menu-aim__submenu-pane
+                    .columns.small-12.large-4.menu-aim__submenu-pane id="subnav-#{nav_item.section.parameterize}"
                       h4.read-more.text-light.show-for-large = (is_product == true ? "Product Family" : nil)
                       ul.menu.menu-nav-list
                         - nav_item.child_data.each do | child |
