--- a/source/partials/head/_header.slim
+++ b/source/partials/head/_header.slim
@@ -20,78 +20,76 @@ ruby:
 = partial "partials/snippets/alert-ribbon"
 - nav_collection = data.site.collections.to_a.select { |id, entry | (id == "HkskHrVGykqSqOKGiqkaW") }
 nav.nav data-theme=theme
-  .menu-aim
-    .mobile-toggle.hide-for-large
-      a.nav-logo--link href="/" title="Datica Home"
-        svg id="datica-logo-mobile" class="nav-logo"
+  .mobile-toggle.hide-for-large
+    a.nav-logo--link href="/" title="Datica Home"
+      svg id="datica-logo-mobile" class="nav-logo"
+        use.symbol-icon xlink:href="#datica-logo-horiz"
+    a.toggle-me#nav-toggle href="#"
+      span
+      span
+  ul.menu.nav__container.mobile-toggle-target#nav-target
+    li.nav__item.nav__logo.show-for-large
+      a.nav-logo--link href="/" title="Datica Home" style="padding: 0 1rem;"
+        svg id="datica-logo-desktop" class="nav-logo"
           use.symbol-icon xlink:href="#datica-logo-horiz"
-      a.toggle-me#nav-toggle href="#"
-        span
-        span
-    ul.menu.menu-aim__container.mobile-toggle-target#nav-target
-      li.menu-aim__item.menu-aim__logo.show-for-large
-        a.nav-logo--link.no-child href="/" title="Datica Home" style="padding: 0 1rem;"
-          svg id="datica-logo-desktop" class="nav-logo"
-            use.symbol-icon xlink:href="#datica-logo-horiz"
-        .menu-aim__item-submenu
-      - nav_collection.each do | id, nav_section |
-        /p.lead.hide-for-medium = (nav_section.has_key?("subhead") ? nav_section.subhead : nil)
-        - nav_section["related_entries"].each do | nav_item |
-          - if nav_item.section == "Compliance" || nav_item.section == "Integration" ? is_product = true : is_product = false
-          - unless nav_item.has_key?("show_in_top_nav") && nav_item.show_in_top_nav == false
-            li.menu-aim__item.menu-aim__section id=nav_item.title_short.parameterize
-              a.menu-aim__item-name href=(nav_item.has_key?("section_link_uri") ? nav_item.section_link_uri : nil )
-                span = nav_item.title_short 
-                / .menu-aim__item-summary.hide-for-large = nav_item.summary
-              .menu-aim__item-submenu.z-20 id="subnav-#{nav_item.section.parameterize}"
-                .row.align-center
-                  .columns.small-12.large-4.menu-aim__submenu-pane.show-for-large.show-for-large
-                    h3.headline-4 = nav_item.title
-                    p.text-small = nav_item.summary
-                    - if nav_item.has_key?("section_link_label")
-                      = current_link_to nav_item.section_link_label, nav_item.section_link_uri, title: nav_item.section_link_label, class: "link-arrow link-arrow--yellow show-for-large"
-                  - if nav_item.has_key?("child_data")
-                    .columns.small-12.large-4.menu-aim__submenu-pane
-                      h4.read-more.text-light.show-for-large = (is_product == true ? "Product Family" : nil)
-                      ul.menu.menu-nav-list
-                        - nav_item.child_data.each do | child |
-                          li
-                            - if is_product == true && child.has_key?("icon")
-                              a href=child.url title="Explore #{child.title}"
-                                .media-object.product
-                                  .media-object-section
-                                    = inline_svg(child.icon, class: "icon-size--medium")
-                                  .media-object-section.media-object--info.main-section.align-self-middle
-                                    h4.product-title = child.title
-                                    .product-description.text-small.show-for-large = child.desc
-                            - else
-                              = current_link_to child.title, child.url, title: child.desc
+      .nav-submenu
+    - nav_collection.each do | id, nav_section |
+      /p.lead.hide-for-medium = (nav_section.has_key?("subhead") ? nav_section.subhead : nil)
+      - nav_section["related_entries"].each do | nav_item |
+        - if nav_item.section == "Compliance" || nav_item.section == "Integration" ? is_product = true : is_product = false
+        - unless nav_item.has_key?("show_in_top_nav") && nav_item.show_in_top_nav == false
+          li.nav__item.nav__section id=nav_item.title_short.parameterize
+            a.nav__item-name href=(nav_item.has_key?("section_link_uri") ? nav_item.section_link_uri : nil )
+              span = nav_item.title_short 
+              / .nav__item-summary.hide-for-large = nav_item.summary
+            .nav-submenu.z-20 id="subnav-#{nav_item.section.parameterize}"
+              .row.align-center
+                .columns.small-12.large-4.nav__submenu-pane.show-for-large.show-for-large
+                  h3.headline-4 = nav_item.title
+                  p.text-small = nav_item.summary
+                  - if nav_item.has_key?("section_link_label")
+                    = current_link_to nav_item.section_link_label, nav_item.section_link_uri, title: nav_item.section_link_label, class: "link-arrow link-arrow--yellow fade-1 show-for-large"
+                - if nav_item.has_key?("child_data")
+                  .columns.small-12.large-4.nav__submenu-pane
+                    h4.read-more.text-light.show-for-large = (is_product == true ? "Product Family" : nil)
+                    ul.menu.menu-nav-list
+                      - nav_item.child_data.each do | child |
+                        li
+                          - if is_product == true && child.has_key?("icon")
+                            a href=child.url title="Explore #{child.title}"
+                              .media-object.nav__product
+                                .media-object-section
+                                  = inline_svg(child.icon, class: "icon-size--medium")
+                                .media-object-section.media-object--info.main-section.align-self-middle
+                                  h4.nav__product-title = child.title
+                                  .nav__product-description.text-small.show-for-large = child.desc
+                          - else
+                            = current_link_to child.title, child.url, title: child.desc
 
-                          - if child.has_key?("has_divider") && child.has_divider == true
-                            hr.menu-divider
-                  - if nav_item.has_key?("section_promo")
-                    - path = case nav_item.section_promo._meta.content_type_id
-                    - when "academy" then "academy"
-                    - when "blog" then "blog"
-                    - when "cta" then "cta"
-                    - when "caseStudy" then "customer"
-                    - when "events" then "event"
-                    - when "guides" then "guide"
-                    - when "pressReleases" then "press-release"
-                    - when "reports" then "innovation"
-                    - when "webinars" then "webinar"
-                    - promo_url = "/#{path}/#{nav_item.section_promo.slug}"
-                    - case nav_item.section_promo._meta.content_type_id
-                    - when "webinars"
-                      .columns.small-12.large-4.bg-gray-2.nopad.show-for-large
-                        = partial "partials/cards/webinar-poster", :locals => { :entry => data.site.webinars[nav_item.section_promo.id] }
-                    - else
-                      .columns.small-12.large-4.bg-gray-2.menu-aim__submenu-pane.show-for-large
-                        h4.headline-5.menu-aim--promo = nav_item.section_promo.title
-                        p.text-small = nav_item.section_promo.summary
-                        = partial "partials/snippets/button", :locals => { :label => "Learn More", :url => promo_url, :button_classes => "button small success", :data_track_group => "nav", :item_id => "nav-promo-#{path}", :icon => "icon-angle-right", :icon_align => "right" }
-      li.menu-aim__item.menu-aim__contact.button-group.stacked-for-small
-        = partial "partials/snippets/button", :locals => { :label => "Contact Us", :url => "/contact/", :button_classes => "contact-button button small", :item_id => "contact", :data_track_group => "nav", :expand => "false" }
-        /| &nbsp;
-        = partial "partials/snippets/button", :locals => { :label => "(888) 377-3184", :url => "tel:8883773184", :button_classes => "call-button hide-for-large button small", :icon => "icon-phone", :icon_align => "left", :item_id => "phone", :data_track_group => "nav", :expand => "false" }
-        .menu-aim__item-submenu
+                        - if child.has_key?("has_divider") && child.has_divider == true
+                          hr.menu-divider
+                - if nav_item.has_key?("section_promo")
+                  - path = case nav_item.section_promo._meta.content_type_id
+                  - when "academy" then "academy"
+                  - when "blog" then "blog"
+                  - when "cta" then "cta"
+                  - when "caseStudy" then "customer"
+                  - when "events" then "event"
+                  - when "guides" then "guide"
+                  - when "pressReleases" then "press-release"
+                  - when "reports" then "innovation"
+                  - when "webinars" then "webinar"
+                  - promo_url = "/#{path}/#{nav_item.section_promo.slug}"
+                  - case nav_item.section_promo._meta.content_type_id
+                  - when "webinars"
+                    .columns.small-12.large-4.bg-gray-2.nopad.show-for-large
+                      = partial "partials/cards/webinar-poster", :locals => { :entry => data.site.webinars[nav_item.section_promo.id] }
+                  - else
+                    .columns.small-12.large-4.bg-gray-2.nav__submenu-pane.show-for-large
+                      h4.headline-5.nav--promo = nav_item.section_promo.title
+                      p.text-small = nav_item.section_promo.summary
+                      = partial "partials/snippets/button", :locals => { :label => "Learn More", :url => promo_url, :button_classes => "button small success", :data_track_group => "nav", :item_id => "nav-promo-#{path}", :icon => "icon-angle-right", :icon_align => "right" }
+    li.nav__item.nav__contact.button-group.stacked-for-small
+      = partial "partials/snippets/button", :locals => { :label => "Contact Us", :url => "/contact/", :button_classes => "contact-button button small", :item_id => "contact", :data_track_group => "nav", :expand => "false" }
+      /| &nbsp;
+      = partial "partials/snippets/button", :locals => { :label => "(888) 377-3184", :url => "tel:8883773184", :button_classes => "call-button hide-for-large button small", :icon => "icon-phone", :icon_align => "left", :item_id => "phone", :data_track_group => "nav", :expand => "false" }
